[gd_scene load_steps=25 format=3 uid="uid://dbeoqwg7vnkit"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="2_c0g4o"]
[ext_resource type="Resource" uid="uid://dvb5o4t3g78j" path="res://scenes/player/equipment/arms/no_arm.tres" id="3_bknpk"]
[ext_resource type="Script" path="res://scenes/player/equipment/equipment.gd" id="4_71uds"]
[ext_resource type="Texture2D" uid="uid://b5kneaucpfkk1" path="res://media/graphics/entities/player/hat/hat.png" id="5_84fve"]
[ext_resource type="Script" path="res://scenes/items/item.gd" id="5_eb6ah"]
[ext_resource type="Script" path="res://scenes/player/inventory/inventory.gd" id="6_8kq46"]
[ext_resource type="Texture2D" uid="uid://brond8g8mvrnh" path="res://media/graphics/entities/player/head/head.png" id="6_nmpc3"]
[ext_resource type="Script" path="res://scenes/player/stats/stats.gd" id="6_wpjcc"]
[ext_resource type="Texture2D" uid="uid://blxbitqaca7an" path="res://media/graphics/entities/player/eyes/eyes.png" id="7_y24l3"]
[ext_resource type="Texture2D" uid="uid://cqxlgux7mtl4" path="res://media/graphics/entities/player/cloak/cloak.png" id="8_olf30"]
[ext_resource type="Texture2D" uid="uid://dmb17bc30d10v" path="res://media/graphics/entities/player/body/body.png" id="9_6hf4v"]

[sub_resource type="Resource" id="Resource_moljo"]
script = ExtResource("6_wpjcc")
hat_color = 0
head_color = 0
eye_color = 0
cloak_color = 0
body_color = 0
minimum_movespeed = 0
current_movespeed = 150
max_extra_jumps = 5
current_extra_jumps = 0
health = 0
max_health = 100
gold_health = 0
max_gold_health = 100
health_regen_modifier = 1.0
max_mana_points = 16
max_mystic_points = 16
current_mana_points = 0
current_mystic_points = 0
mana_regen_modifier = 1.0
strength = 0
dexterity = 0
force = 0
technique = 0
magic = 0
light = 0
dark = 0
voyd = 0

[sub_resource type="Resource" id="Resource_ca1b6"]
script = ExtResource("4_71uds")
left_arm_1 = ExtResource("3_bknpk")
left_arm_2 = ExtResource("3_bknpk")
right_arm_1 = ExtResource("3_bknpk")
right_arm_2 = ExtResource("3_bknpk")

[sub_resource type="Resource" id="Resource_0mc2f"]
script = ExtResource("6_8kq46")
inv_row = Array[ExtResource("5_eb6ah")]([])

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_101xw"]
polygon = PackedVector2Array(-9, -8, -9, -10, -8, -10, -8, -12, -7, -12, -7, -13, -4, -13, -4, -14, 0, -14, 0, -13, 1, -13, 1, -12, 2, -12, 2, -11, 3, -11, 3, -10, 8, -10, 8, -8, 6, -8, 6, -7, 5, -7, 5, -6, 4, -6, 4, -3, 5, -3, 5, -1, 6, -1, 6, 11, 5, 11, 5, 12, 4, 12, 4, 13, -5, 13, -5, 12, -6, 12, -6, 11, -7, 11, -7, 0, -6, 0, -6, -2, -5, -2, -5, -3, -4, -3, -4, -4, -6, -4, -6, -3, -8, -3, -8, -4, -9, -4, -9, -5, -8, -5, -8, -6, -6, -6, -6, -7, -5, -7, -5, -8, -4, -8, -4, -10, -7, -10, -7, -9, -8, -9, -8, -8)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_exk5u"]
radius = 6.4
height = 22.4

[sub_resource type="Animation" id="Animation_5jsmg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/RArms:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/LArms:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5ho3c"]
resource_name = "idle_l"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/CloakL:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/Body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/CloakR:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/RArms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.266667, 0.8),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/LArms:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.266667, 0.8),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_625sg"]
resource_name = "idle_r"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/CloakL:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/Body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/CloakR:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/RArms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.266667, 0.8),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/LArms:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.266667, 0.8),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gk0wa"]
resource_name = "jump_l"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/CloakL:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/Body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/CloakR:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o4ey6"]
resource_name = "jump_r"
length = 1.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/CloakL:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/Body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/CloakR:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_l3jyk"]
resource_name = "walk_l"
length = 0.400003
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/CloakL:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/Body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/CloakR:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/RArms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/LArms:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0qlb1"]
resource_name = "walk_r"
length = 0.400003
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/CloakL:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/Body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/CloakR:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/RArms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/LArms:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ugvf"]
_data = {
"RESET": SubResource("Animation_5jsmg"),
"idle_l": SubResource("Animation_5ho3c"),
"idle_r": SubResource("Animation_625sg"),
"jump_l": SubResource("Animation_gk0wa"),
"jump_r": SubResource("Animation_o4ey6"),
"walk_l": SubResource("Animation_l3jyk"),
"walk_r": SubResource("Animation_0qlb1")
}

[node name="Player" type="CharacterBody2D"]
scale = Vector2(5, 5)
collision_mask = 15
script = ExtResource("2_c0g4o")
jump_height = 60.0
seconds_to_peak = 0.3
seconds_to_fall = 0.2
stats = SubResource("Resource_moljo")
equipment = SubResource("Resource_ca1b6")
inventory = SubResource("Resource_0mc2f")

[node name="Occluder" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_101xw")

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1.8)
shape = SubResource("CapsuleShape2D_exk5u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ugvf")
}

[node name="Sprite" type="CanvasGroup" parent="."]
position = Vector2(-2.98023e-08, -2.98023e-08)

[node name="Hat" type="Sprite2D" parent="Sprite"]
position = Vector2(1.90735e-06, 2)
texture = ExtResource("5_84fve")
hframes = 4

[node name="Head" type="Sprite2D" parent="Sprite"]
position = Vector2(1.90735e-06, 2)
texture = ExtResource("6_nmpc3")
hframes = 4

[node name="Eyes" type="Sprite2D" parent="Sprite"]
position = Vector2(1.90735e-06, 2)
texture = ExtResource("7_y24l3")
hframes = 4

[node name="CloakR" type="Sprite2D" parent="Sprite"]
position = Vector2(12, 2)
texture = ExtResource("8_olf30")
hframes = 8
frame = 1

[node name="RArms" type="Node2D" parent="Sprite"]

[node name="RArm1" type="Sprite2D" parent="Sprite/RArms"]
position = Vector2(2.6, 1.4)
rotation = 1.15769

[node name="EmissionMarker" type="Marker2D" parent="Sprite/RArms/RArm1"]
position = Vector2(12.1606, -0.00409922)
gizmo_extents = 0.0

[node name="RArm2" type="Sprite2D" parent="Sprite/RArms"]
position = Vector2(1.6, 3.4)
rotation = 1.15767

[node name="EmissionMarker" type="Marker2D" parent="Sprite/RArms/RArm2"]
position = Vector2(12.1606, -0.00409922)
gizmo_extents = 0.0

[node name="Body" type="Sprite2D" parent="Sprite"]
position = Vector2(1.90735e-06, 2)
texture = ExtResource("9_6hf4v")
hframes = 4

[node name="LArms" type="Node2D" parent="Sprite"]

[node name="LArm2" type="Sprite2D" parent="Sprite/LArms"]
position = Vector2(-3.6, 3.4)
rotation = 1.16958

[node name="EmissionMarker" type="Marker2D" parent="Sprite/LArms/LArm2"]
position = Vector2(12.1606, -0.00409922)
gizmo_extents = 0.0

[node name="LArm1" type="Sprite2D" parent="Sprite/LArms"]
position = Vector2(-2.6, 1.4)
rotation = 1.15767

[node name="EmissionMarker" type="Marker2D" parent="Sprite/LArms/LArm1"]
position = Vector2(12.1606, -0.00409922)
gizmo_extents = 0.0

[node name="CloakL" type="Sprite2D" parent="Sprite"]
position = Vector2(-12, 2)
texture = ExtResource("8_olf30")
hframes = 8

[node name="RFaceArmMarkers" type="Node2D" parent="."]
visible = false

[node name="LArm1" type="Marker2D" parent="RFaceArmMarkers"]
position = Vector2(-2.6, 0.4)
gizmo_extents = 0.0

[node name="LArm2" type="Marker2D" parent="RFaceArmMarkers"]
position = Vector2(-3.6, 2.4)
gizmo_extents = 0.0

[node name="RArm1" type="Marker2D" parent="RFaceArmMarkers"]
position = Vector2(2.6, 0.4)
gizmo_extents = 0.0

[node name="RArm2" type="Marker2D" parent="RFaceArmMarkers"]
position = Vector2(1.6, 2.4)
gizmo_extents = 0.0

[node name="LFaceArmMarkers" type="Node2D" parent="."]
visible = false

[node name="LArm1" type="Marker2D" parent="LFaceArmMarkers"]
position = Vector2(-2.6, 0.4)
gizmo_extents = 0.0

[node name="LArm2" type="Marker2D" parent="LFaceArmMarkers"]
position = Vector2(-1.6, 2.4)
gizmo_extents = 0.0

[node name="RArm1" type="Marker2D" parent="LFaceArmMarkers"]
position = Vector2(2.6, 0.4)
gizmo_extents = 0.0

[node name="RArm2" type="Marker2D" parent="LFaceArmMarkers"]
position = Vector2(3.6, 2.4)
gizmo_extents = 0.0

[node name="PassiveManaRegen" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PassiveHealthRegen" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="PassiveManaRegen" to="." method="_on_passive_mana_regen_timeout"]
[connection signal="timeout" from="PassiveHealthRegen" to="." method="_on_passive_health_regen_timeout"]
